--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>my-first-website</title>
+  <!-- Main Stylesheet File -->
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
