--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+<h1>Hi everyone</h1>
+
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
